added airana apa

--- a/start.html
+++ b/start.html
@@ -7,6 +7,7 @@
     <title>Sayeed</title>
 </head>
 <body>
+    <img src="h1.jpg" alt="">
     <h1>This is not html file.It is a start.html file</h1>
 </body>
 </html>
