--- a/start.html
+++ b/start.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <h1>My first blog</h1>
-        <h3>Look mama i can write a blog</h3>
+        <h3>Look mama i can write a blog.It's not your mama.It's your amma!</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur facilis ullam totam assumenda in fuga beatae nam, deleniti saepe quod.</p>
     </div>
     <img src="h1.jpg" alt="">
